# Chess

final-project-tgust002-jruiz096-myama048/: .gitignore  Bishop.cpp  Bishop.hpp  Bishop_test.hpp  CMakeLists.txt  Checker.cpp  Checker.hpp  CheckerMove.cpp  CheckerMove.hpp  Checker_test.hpp  Checkers.cpp  Checkers.hpp  Checkers_test.hpp  Chess.cpp  Chess.hpp  Chess_test.hpp  DiagonalMove.cpp  DiagonalMove.hpp  Game.cpp  Game.hpp  Gameplay.cpp  Gameplay.hpp  Gameplay_test.hpp  King.cpp  King.hpp  King_test.hpp  Knight.cpp  Knight.hpp  Knight_test.hpp  MakeyourOwn.hpp  MoveInterface.hpp  Pawn.cpp  Pawn.hpp  Pawn_test.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Queen_test.hpp  README.md  (+16 more)
